Ugly hacks to help with Chrome invisible iframe rendering issue

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -19,26 +19,33 @@
 
 html, body
 	min-width: tga.width + 300px
-
-.page-container
-	display: flex
+	overflow: hidden
 	width: 100%
 	height: 100%
-	overflow: hidden
 
-	> iframe
-		position: relative
-		z-index: 3
-		flex: 1
-		background: transparent
+#tga
+	position: absolute
+	left: 0
+	top: 0
+	height: 100%
 
-	> .chat-not-loaded
-		position: absolute
-		z-index: 2
-		top: 50%
-		left: tga.width
-		right: 0
-		transform: translateY(-50%)
-		padding: 0 2em
-		text-align: center
-		color: colors.grey
+#chat
+	position: absolute
+	top: 0
+	left: tga.width
+	width: 'calc(100% - %s)' % tga.width
+	height: 100%
+	z-index: 3
+	// flex: 1
+	// background: transparent
+
+#chat-not-loaded
+	position: absolute
+	z-index: 2
+	top: 50%
+	left: tga.width
+	right: 0
+	transform: translateY(-50%)
+	padding: 0 2em
+	text-align: center
+	color: colors.grey
